--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 </p>
                 <div class="mt-8 flex flex-wrap justify-center md:justify-start gap-4">
                     <a href="https://apestore.co/" target="_blank" class="btn-secondary font-bold py-3 px-8 rounded-full text-lg">Buy $KEVIN</a>
-                    <a href="#" class="btn-primary font-bold py-3 px-8 rounded-full text-lg">Join Telegram</a>
+                    <a href="https://t.me/+ysCOWI6DwThiOWE1" class="btn-primary font-bold py-3 px-8 rounded-full text-lg">Join Telegram</a>
                 </div>
             </div>
             <div>
@@ -311,3 +311,4 @@
     </script>
 </body>
 </html>
+
